--- a/03.11.25.yaml
+++ b/03.11.25.yaml
@@ -47,6 +47,7 @@ proxies:
   port: 443
   uuid: 2f846454-ac91-4843-b0e8-b47ecce865dd
   udp: true
+  chipher: auto
   skip-cert-verify: true
   tls: true
   servername: id1-prem.kitu.my.id
@@ -61,6 +62,7 @@ proxies:
   port: 443
   uuid: 2f846454-ac91-4843-b0e8-b47ecce865dd
   udp: true
+  chipher: auto
   skip-cert-verify: true
   tls: true
   servername: id1-prem.kitu.my.id
@@ -75,6 +77,7 @@ proxies:
   port: 443
   uuid: 2f846454-ac91-4843-b0e8-b47ecce865dd
   udp: true
+  chipher: auto
   skip-cert-verify: true
   tls: true
   servername: id1-prem.kitu.my.id
@@ -89,6 +92,7 @@ proxies:
   port: 443
   uuid: eb954b8e-98dd-4285-91d0-db9017cbb893
   udp: true
+  chipher: auto
   skip-cert-verify: true
   tls: true
   servername: ava.game.naver.com.itttok-wildcard-ssl-panel.kitu.my.id
