--- a/03.11.25.yaml
+++ b/03.11.25.yaml
@@ -40,7 +40,7 @@ dns:
     - 112.215.198.254
     - 112.215.203.248
     - 112.215.203.254
-proxies:
+  proxies:
 - name: b
   server: api24-normal-useast1a.tiktokv.com
   port: 443
@@ -121,6 +121,7 @@ rules:
   # Global
   - MATCH,GLOBAL
   # Whatsapp
+  - DOMAIN-SUFFIX,m.me,Whatsapp
   - DOMAIN-SUFFIX,oculus.com,Whatsapp
   - DOMAIN-SUFFIX,oculuscdn.com,Whatsapp
   - DOMAIN-SUFFIX,rocksdb.org,Whatsapp
