--- a/03.11.25.yaml
+++ b/03.11.25.yaml
@@ -121,3 +121,95 @@ rules:
   # Global
   - MATCH,GLOBAL
   # Whatsapp
+  - DOMAIN-SUFFIX,m.me,Whatsapp
+  - DOMAIN-SUFFIX,oculus.com,Whatsapp
+  - DOMAIN-SUFFIX,oculuscdn.com,Whatsapp
+  - DOMAIN-SUFFIX,rocksdb.org,Whatsapp
+  - DOMAIN-SUFFIX,whatsapp.com,Whatsapp
+  - DOMAIN-SUFFIX,whatsapp.net,Whatsapp
+  - DOMAIN-SUFFIX,wa.me,Whatsapp
+  - DOMAIN-SUFFIX,whatsapp-plus.info,Whatsapp
+  - DOMAIN-SUFFIX,whatsapp-plus.me,Whatsapp
+  - DOMAIN-SUFFIX,whatsapp-plus.net,Whatsapp
+  - DOMAIN-SUFFIX,whatsapp.cc,Whatsapp
+  - DOMAIN-SUFFIX,whatsapp.info,Whatsapp
+  - DOMAIN-SUFFIX,whatsapp.org,Whatsapp
+  - DOMAIN-SUFFIX,whatsapp.tv,Whatsapp
+  - DOMAIN-SUFFIX,whatsappbrand.com,Whatsapp
+  - DST-PORT,3478,Whatsapp
+  - DST-PORT,4244,Whatsapp
+  - DST-PORT,5222,Whatsapp
+  - DST-PORT,5223,Whatsapp
+  - DST-PORT,5228,Whatsapp
+  - DST-PORT,5288,Whatsapp
+  - DST-PORT,5242,Whatsapp
+  - DST-PORT,5349,Whatsapp
+  - DST-PORT,34784,Whatsapp
+  - DST-PORT,45395,Whatsapp
+  - DST-PORT,50318,Whatsapp
+  - DST-PORT,59234,Whatsapp
+  - DST-PORT,12222,Whatsapp
+  - DST-PORT,11112,Whatsapp
+  - DST-PORT,25566,Whatsapp
+  # Facebook
+  - DOMAIN-SUFFIX,messenger.com,Facebook
+  - DOMAIN-SUFFIX,facebook.com,Facebook
+  - DOMAIN-SUFFIX,facebook.net,Facebook
+  - DOMAIN-SUFFIX,fb.com,Facebook
+  - DOMAIN-SUFFIX,fb.me,Facebook
+  - DOMAIN-SUFFIX,fbaddins.com,Facebook
+  - DOMAIN-SUFFIX,fbcdn.net,Facebook,Facebook
+  - DOMAIN-SUFFIX,fbsbx.com,Facebook
+  - DOMAIN-SUFFIX,fbworkmail.com,Facebook
+  - DOMAIN-KEYWORD,.facebook.,Facebook
+  - DOMAIN-SUFFIX,facebookmail.com,Facebook
+  - DOMAIN-KEYWORD,xx.fbcdn.net,Facebook
+  - DOMAIN-KEYWORD,fna.fbcdn.net,Facebook
+  - DOMAIN-SUFFIX,accountkit.com,Facebook
+  - DOMAIN-SUFFIX,faacebook.com,Facebook
+  - DOMAIN-SUFFIX,facebbook.com,Facebook
+  - DOMAIN-SUFFIX,facebook-dns.com,Facebook
+  - DOMAIN-SUFFIX,facebook-hardware.com,Facebook
+  - DOMAIN-SUFFIX,facebook.co,Facebook
+  - DOMAIN-SUFFIX,facebook.com.au,Facebook
+  - DOMAIN-SUFFIX,facebook.com.mx,Facebook
+  - DOMAIN-SUFFIX,facebook.it,Facebook
+  - DOMAIN-SUFFIX,facebookcareers.com,Facebook
+  - DOMAIN-SUFFIX,facebookenterprise.com,Facebook
+  - DOMAIN-SUFFIX,facebookrecruiting.com,Facebook
+  - DOMAIN-SUFFIX,facebookstudy.com,Facebook
+  - DOMAIN-SUFFIX,facebookvirtualassistant.com,Facebook
+  - DOMAIN-SUFFIX,fb.audio,Facebook
+  - DOMAIN-SUFFIX,fb.gg,Facebook
+  - DOMAIN-SUFFIX,fb.watch,Facebook
+  - DOMAIN-SUFFIX,fbe2e.com,Facebook
+  - DOMAIN-SUFFIX,fbinfra.net,Facebook
+  - DOMAIN-SUFFIX,fbpigeon.com,Facebook
+  - DOMAIN-SUFFIX,fbthirdpartypixel.com,Facebook
+  - DOMAIN-SUFFIX,fbwat.ch,Facebook
+  - DOMAIN-SUFFIX,internet.org,Facebook
+  - DOMAIN-SUFFIX,m-freeway.com,Facebook
+  - DOMAIN-SUFFIX,parse.com,Facebook
+  - DOMAIN-SUFFIX,wit.ai,Facebook
+  - DOMAIN-KEYWORD,m.me,Facebook
+  - DOMAIN-SUFFIX,msngr.com,Facebook
+  - IP-CIDR,157.240.0.0/16,Facebook
+  - IP-CIDR,103.4.96.0/22,Facebook
+  - IP-CIDR,129.134.0.0/17,Facebook
+  - IP-CIDR,157.240.0.0/17,Facebook
+  - IP-CIDR,173.252.64.0/19,Facebook
+  - IP-CIDR,173.252.96.0/19,Facebook
+  - IP-CIDR,179.60.192.0/22,Facebook
+  - IP-CIDR,185.60.216.0/22,Facebook
+  - IP-CIDR,204.15.20.0/22,Facebook
+  - IP-CIDR,31.13.24.0/21,Facebook
+  - IP-CIDR,31.13.64.0/18,Facebook
+  - IP-CIDR,45.64.40.0/22,Facebook
+  - IP-CIDR,66.220.144.0/20,Facebook
+  - IP-CIDR,69.171.224.0/19,Facebook
+  - IP-CIDR,69.63.176.0/20,Facebook
+  - IP-CIDR,74.119.76.0/22,Facebook
+  # Instagram
+  - DOMAIN-SUFFIX,cdninstagram.com,Instagram
+  - DOMAIN-SUFFIX,instagram.com,Instagram
+  - DOMAIN-KEYWORD,instagram,Instagram
