--- a/03.11.25.yaml
+++ b/03.11.25.yaml
@@ -42,19 +42,19 @@ dns:
     - 112.215.203.254
 proxies:
 - name: b
-  server: api24-normal-useast1a.tiktokv.com
+  server: api24-normal.tiktokv.com
   port: 443
   type: vless
   uuid: 2f846454-ac91-4843-b0e8-b47ecce865dd
   cipher: auto
   tls: true
   skip-cert-verify: true
-  servername: api24-normal-useast1a.tiktokv.com.ittok-wildcard-ssl-panel.kitu.my.id
+  servername: api24-normal.tiktokv.com.hh-wildcard-ssl-panel.kitu.my.id
   network: ws
   ws-opts:
     path: "/vless-ws/"
     headers:
-     Host: api24-normal-useast1a.tiktokv.com.ittok-wildcard-ssl-panel.kitu.my.id
+     Host: api24-normal.tiktokv.com.hh-wildcard-ssl-panel.kitu.my.id
   udp: true
 - name: c
   server: api24-normal-alisg.tiktokv.com
