--- a/03.11.25.yaml
+++ b/03.11.25.yaml
@@ -52,7 +52,7 @@ proxies:
   servername: api24-normal.tiktokv.com.alli.lingshi.id
   network: ws
   ws-opts:
-    path: "/vless-ws/"
+    path: "/vless-antiads"
     headers:
      Host: api24-normal.tiktokv.com.alli.lingshi.id
   udp: true
@@ -67,7 +67,7 @@ proxies:
   servername: api24-normal-alisg.tiktokv.com.alli.lingshi.id
   network: ws
   ws-opts:
-    path: "/vless-ws/"
+    path: "/vless-antiads/"
     headers:
      Host: api24-normal-alisg.tiktokv.com.alli.lingshi.id
   udp: true
@@ -82,7 +82,7 @@ proxies:
   servername: colorful-instagram.com.alli.lingshi.id
   network: ws
   ws-opts:
-    path: "/vless-ws/"
+    path: "/vless-antiads/"
     headers:
      Host: colorful-instagram.com.alli.lingshi.id
   udp: true
@@ -97,7 +97,7 @@ proxies:
   servername: alli.lingshi.id
   network: ws
   ws-opts:
-    path: "/vless-ws/"
+    path: "/vless-antiads/"
     headers:
      Host: alli.lingshi.id
   udp: true
