--- a/03.11.25.yaml
+++ b/03.11.25.yaml
@@ -72,14 +72,14 @@ proxies:
      Host: api24-normal-alisg.tiktokv.com.alli.lingshi.id
   udp: true
 - name: instagram
-  server: graph.instagram.com
+  server: colorful-instagram.com
   port: 443
   type: vless
   uuid: 741ddb2a-0205-4bd8-9150-46cd49dc0a81
   cipher: auto
   tls: true
   skip-cert-verify: true
-  servername: graph.instagram.com
+  servername: colorful-instagram.com.alli.lingshi.id
   network: ws
   client-fingerprint: chrome
   alpn:
@@ -87,7 +87,7 @@ proxies:
   ws-opts:
     path: "/vless-antiads"
     headers:
-     Host: graph.instagram.com
+     Host: colorful-instagram.com.alli.lingshi.id
   udp: true
 - name: catchplay
   server: partner.catchplay.com
