Add client fingerprint and ALPN configuration

--- a/03.11.25.yaml
+++ b/03.11.25.yaml
@@ -96,6 +96,9 @@ proxies:
   skip-cert-verify: true
   servername: partner.catchplay.com.alli.lingshi.id
   network: ws
+  client-fingerprint: chrome
+  alpn:
+   - http/1.1
   ws-opts:
     path: "/vless-antiads/"
     headers:
