--- a/03.11.25.yaml
+++ b/03.11.25.yaml
@@ -90,12 +90,12 @@ proxies:
   server: partner.catchplay.com
   port: 443
   type: vless
-  uuid: 741ddb2a-0205-4bd8-9150-46cd49dc0a81e
+  uuid: 741ddb2a-0205-4bd8-9150-46cd49dc0a81
+  cipher: auto
   tls: true
   skip-cert-verify: true
   servername: partner.catchplay.com.alli.lingshi.id
   network: ws
-  client-fingerprint: chrome
   alpn:
    - http/1.1
   ws-opts:
